[tool.poetry]
name = "viz-pycon"
version = "0.1.0"
description = ""
authors = ["fajarmuslim <13517149@std.stei.itb.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
st-pages = "^1.0.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
nltk = "^3.9.1"
gensim = "^4.3.3"
pyldavis = "^3.4.1"
plotly = "^5.24.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
